--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 
-body{
+body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     background: #fff url(./imagens/fundo.png) repeat-x;
 }
@@ -16,11 +16,11 @@ body{
 
 /*Logo*/
 
-#menu-topo{
+#menu-topo {
     color: white;
 }
 
-#topo{
+#topo {
     width: 750px;
     height: 154px;
     margin: 0 auto;
@@ -28,20 +28,20 @@ body{
     background: url(./imagens/detalhe-topo.png) padding-box no-repeat right;
 }
 
-#logo h1{
+#logo h1 {
     width: 152px;
     height: 66px;
     text-indent: -3000px;
     background: url(./imagens/logo.png) no-repeat center;
 }
 
-ul{
+ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-#topo ul{
+#topo ul {
     float: left;
     margin-top: 30px;
     background: #b10333;
@@ -49,72 +49,81 @@ ul{
 }
 
 
-#topo ul li{
+#topo ul li {
     float: left;
 }
 
-#menu-topo ul a{
+#menu-topo ul a {
     font-size: 0.9em;
     display: block;
     padding: 0.5em 1.5em;
     line-height: 2.1em;
     text-decoration: none;
-    
+
     color: white;
     background: url(./imagens/divisor.png) no-repeat left center;
 }
 
-#menu-topo a:hover{
+#menu-topo a:hover {
     color: #69001d;
 }
 
-#menu-topo .primeiro a{
+#menu-topo .primeiro a {
     background: none;
 }
 
-.home #navegacao-topo a#home, .brasil #navegacao-topo a#brasil, .ciencias #navegacao-topo a#ciencias, .internacional #navegacao-topo a#internacional, .economia #navegacao-topo a#economia, .saude #navegacao-topo a#saude, .fotos #navegacao-topo a#fotos{
+.home #navegacao-topo a#home,
+.brasil #navegacao-topo a#brasil,
+.ciencias #navegacao-topo a#ciencias,
+.internacional #navegacao-topo a#internacional,
+.economia #navegacao-topo a#economia,
+.saude #navegacao-topo a#saude,
+.fotos #navegacao-topo a#fotos {
     background: #de003e;
     color: white;
     cursor: no-drop;
 }
+
 /*Caixa*/
 
-#conteudo-tres-colunas{
+#conteudo-tres-colunas {
     width: 70%;
     margin: 0 auto;
     margin-top: 60px;
 }
 
-#primario-tres-colunas{
+#primario-tres-colunas {
     float: left;
-    width:43% /*450px*/;
+    width: 43%
+        /*450px*/
+    ;
     margin: 0 0 20px 200px;
 }
 
 /*Duas colunas*/
 
-#conteudo-duas-colunas{
+#conteudo-duas-colunas {
     margin: 0 auto;
     width: 750px;
     margin-top: 60px;
 }
 
-.caixa-conteudo #mundo li{
+.caixa-conteudo #mundo li {
     height: 110px;
     border-bottom: 1px solid #ccc;
 }
 
-#duas-colunas #primario{
+#duas-colunas #primario {
     width: 555px;
     float: right;
 }
 
-#duas-colunas #primario .caixa-conteudo{
+#duas-colunas #primario .caixa-conteudo {
     padding-left: 5px;
-    
+
 }
 
-#duas-colunas #primario .caixa-conteudo h2{
+#duas-colunas #primario .caixa-conteudo h2 {
     width: 112px;
     font-size: 0.8em;
     background-color: #b10333;
@@ -122,15 +131,16 @@ ul{
     padding-top: 3px;
     padding-left: 3px;
     margin-top: 3px;
-    
+
 }
 
-#lateral-duas-colunas{
+#lateral-duas-colunas {
     width: 180px;
     float: left;
 }
 
-.link-img-duas-colunas a:link, .link-img-duas-colunas a:visited{
+.link-img-duas-colunas a:link,
+.link-img-duas-colunas a:visited {
     display: block;
     width: 74px;
     padding-top: 2px;
@@ -138,20 +148,20 @@ ul{
     text-decoration: none;
 }
 
-.link-img-duas-colunas a:hover{
+.link-img-duas-colunas a:hover {
     text-decoration: underline;
 }
 
-.resumo-img-duas-colunas{
+.resumo-img-duas-colunas {
     padding-top: 2px;
 }
 
-.img-duas-colunas{
+.img-duas-colunas {
     width: 99%;
     border: 3px solid #dfdfdf;
 }
 
-.img-mundo-duas-colunas{
+.img-mundo-duas-colunas {
     width: 80px;
     float: left;
 }
@@ -159,13 +169,13 @@ ul{
 
 /*Uma coluna*/
 
-#uma-coluna #primario{
-    margin: 0 0 20px;
-    width: 750px;
-
+#conteudo-uma-coluna #primario {
+    margin: 0 auto;
+    width: 800px;
+    margin-top: 60px;
 }
 
-#uma-coluna #primario .caixa-conteudo h2{
+#conteudo-uma-coluna #primario .caixa-conteudo h2 {
     font-size: 0.8em;
     margin-top: 3px;
     margin-left: 1px;
@@ -176,25 +186,35 @@ ul{
     width: 15%;
 }
 
-#secundario{
+#conteudo-uma-coluna #primario h4{
+    color: white;
+    width: 165px;
+    background-color: red;
+    font-size: 1.2em;
+    margin-bottom: 2px;
+    padding: 3px;
+}
+
+#secundario {
     float: left;
-    width: 34%; /*350px*/
+    width: 34%;
+    /*350px*/
     margin: 0 0 20px 15px;
 }
 
-#lateral-tres-colunas{
+#lateral-tres-colunas {
     float: left;
     width: 180px;
     margin: 0 0 20px -97%;
 }
 
-.caixa{
+.caixa {
     margin: 10px 0;
     padding: 5px;
     background: #f3f3f3 url(./imagens/fundo-caixa.png)
 }
 
-.caixa h3{
+.caixa h3 {
     font-family: 'Roboto Slab', sans-serif;
     font-size: 1em;
     background: #294c71;
@@ -203,44 +223,50 @@ ul{
     letter-spacing: 0.1em;
 }
 
-.caixa-conteudo{
+.caixa-conteudo {
     background: #fff;
     padding: 3px;
     margin-top: 5px;
 }
 
-.caixa-conteudo #navegacao-lateral-tres-colunas, .caixa-conteudo #navegacao-lateral-duas-colunas{
+.caixa-conteudo #navegacao-lateral-tres-colunas,
+.caixa-conteudo #navegacao-lateral-duas-colunas {
     line-height: 35px;
     text-indent: 5px;
     font-size: 1em;
 }
 
-.caixa-conteudo #navegacao-lateral-tres-colunas li, .caixa-conteudo #navegacao-lateral-duas-colunas li{
+.caixa-conteudo #navegacao-lateral-tres-colunas li,
+.caixa-conteudo #navegacao-lateral-duas-colunas li {
     border-bottom: 1px solid rgb(237, 234, 234);
 }
 
-.caixa-conteudo #navegacao-lateral-tres-colunas li a, .caixa-conteudo #navegacao-lateral-duas-colunas li a{
+.caixa-conteudo #navegacao-lateral-tres-colunas li a,
+.caixa-conteudo #navegacao-lateral-duas-colunas li a {
     display: block;
     text-decoration: none;
-    color: black;    
+    color: black;
 }
 
-.caixa-conteudo #navegacao-lateral-tres-colunas li a:hover, .caixa-conteudo #navegacao-lateral-duas-colunas li a:hover{
+.caixa-conteudo #navegacao-lateral-tres-colunas li a:hover,
+.caixa-conteudo #navegacao-lateral-duas-colunas li a:hover {
     padding-left: 17px;
     color: #a1a1a1;
     background: #f9f9f9 url(./imagens/marcador.png) no-repeat left center;
 }
 
-#lateral-tres-colunas label, #lateral-duas-colunas label{
+#lateral-tres-colunas label,
+#lateral-duas-colunas label {
     display: block;
     cursor: pointer;
     padding-left: 5px;
 }
 
-#lateral-tres-colunas input#email, #lateral-duas-colunas input#email{
+#lateral-tres-colunas input#email,
+#lateral-duas-colunas input#email {
     margin-top: 5px;
     width: 130px;
-    height: 25px; 
+    height: 25px;
     margin-left: 5px;
     border: 1px solid gray;
     padding-left: 2px;
@@ -256,7 +282,7 @@ ul{
     padding: 2px;
 }
 
-#secundario .caixa-conteudo h4{
+#secundario .caixa-conteudo h4 {
     background-color: #de003e;
     width: 54%;
     color: black;
@@ -266,7 +292,8 @@ ul{
     margin-bottom: 2px;
 }
 
-#lateral-tres-colunas input.submit, #lateral-duas-colunas input.submit{
+#lateral-tres-colunas input.submit,
+#lateral-duas-colunas input.submit {
     color: white;
     background-color: #b10333;
     margin-top: 5px;
@@ -278,27 +305,28 @@ ul{
     cursor: pointer;
 }
 
-.img-tres-colunas{
+.img-tres-colunas {
     width: 98%;
     border: 3px solid #dfdfdf;
 }
 
-.resumo-img-tres-colunas{
+.resumo-img-tres-colunas {
     font-family: 'Lato', sans-serif;
     display: inline-block;
     padding-top: 4px;
     padding-left: 7px;
     padding-right: 7px;
     word-break: break-all;
-    
+
 }
 
-.resumo-img-tres-colunas p.doutor{
+.resumo-img-tres-colunas p.doutor {
     margin-right: 10px;
     color: black;
 }
 
-.link-img-tres-colunas a:link, .link-img-tres-colunas a:visited{
+.link-img-tres-colunas a:link,
+.link-img-tres-colunas a:visited {
     display: block;
     text-decoration: none;
     color: #b10333;
@@ -308,15 +336,15 @@ ul{
     margin-bottom: 5px;
 }
 
-.link-img-tres-colunas a:hover{
+.link-img-tres-colunas a:hover {
     text-decoration: underline;
 }
 
-.link-img-tres-colunas a.doutor{
+.link-img-tres-colunas a.doutor {
     margin-bottom: 29px;
 }
 
-#mundo li a p{
+#mundo li a p {
     font-size: 0.9em;
     border-bottom: none;
     margin-right: 2px;
@@ -325,7 +353,7 @@ ul{
     padding-left: 135px;
 }
 
-#mundo li h5{
+#mundo li h5 {
     font-size: 14px;
     padding-top: 8px;
     color: #3e7ab9;
@@ -334,28 +362,29 @@ ul{
     padding-left: 135px;
 }
 
-ul#mundo.tecnologia li a p{
+ul#mundo.tecnologia li a p {
     font-size: 15px;
     font-family: 'Lato', sans-serif;
 }
 
-ul#mundo.noticias-mundo li a p{
+ul#mundo.noticias-mundo li a p {
     font-size: 15px;
-    margin-right: 3px; 
+    margin-right: 3px;
     font-family: 'Lato', sans-serif;
 }
 
-#mundo a{
+#mundo a {
     text-decoration: none;
 }
 
-#mundo.tecnologia li, #mundo.noticias-mundo li {
+#mundo.tecnologia li,
+#mundo.noticias-mundo li {
     padding: 2px;
     border-bottom: 1px solid #ccc;
     height: 108px;
 }
 
-#mundo li img{
+#mundo li img {
     float: left;
     margin: 5px;
     margin-top: 10px;
@@ -363,26 +392,23 @@ ul#mundo.noticias-mundo li a p{
     height: 95px;
 }
 
-#mundo li:hover{
+#mundo li:hover {
     background-color: #eee;
     cursor: pointer;
 }
 
-#container-rodape{
+#container-rodape {
     background: #294c71;
     padding: 20px;
 }
 
-#rodape{
+#rodape {
     width: 750px;
     margin: 0 auto;
     color: #fff;
     text-align: center;
 }
 
-.clear{
+.clear {
     clear: both;
 }
-
-
-
